gl31-master/src/test/deca/lex/valid/hellotest/chaine_complete_complexe.deca
// Description:
//    tests de programme correct lexicalement pour hello-world
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 07/01/2021

"Chaine \\ complete avec
saut de ligne \""
