gl31-master/src/test/deca/lex/invalid/hellotest/chaine_EOL_fail.deca
// Description:
//    tests de programme incorrect lexicalement pour hello-world
//
// Resultats:
//    Ligne 10 : Erreur, chaine incomplete et présence de \n
//
// Historique:
//    cree le 07/01/2021

"Chaine multi-lignes
mal terminee
